k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ravix
  namespace: ravix
  labels:
    app: ravix
spec:
  type: ClusterIP
  selector:
    app: ravix
  ports:
    - port: 80
      targetPort: 8080
